--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,35 +6,24 @@
         <h1>table</h1>
         <table border="5">
             <tr>
-                <th>country</th>
-                <th>capital</th>
-                <th>currency</th>
+                <th>school</th>
+                <th>class</th>
+                <th>age</th>
             </tr>
             <tr>
-                <td>india</td>
-                <td>new delhi</td>
-                <td>rupees</td>
+                <td>mind tree</td>
+                <td>8</td>
+                <td>13</td>
             </tr>
             <tr>
-                <td>india</td>
-                <td>new delhi</td>
-                <td>rupees</td>
+                <td>mind tree</td>
+                <td>8</td>
+                <td>13</td>
             </tr>
             <tr>
-                <td>india</td>
-                <td>new delhi</td>
-                <td>rupees</td>
-            </tr>
-            <tr>
-                <td>india</td>
-                <td>new delhi</td>
-                <td>rupees</td>
-            </tr>
-            <tr>
-                <td>india</td>
-                <td>new delhi</td>
-                <td>rupees</td>
-            </tr>
+                <td>mind tree</td>
+                <td>8</td>
+                <td>13</td>
         </table>
     </body>
 </html>
